# ImageProcessingTools__

./: build.gradle  import-summary.txt  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/malattas/imageprocessingtools/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: decodeFunction.cpp  decodeFunction.h  decode_predictions.cpp  textRecognition_lib.cpp  trackingColor_lib.cpp
app/src/main/java/com/example/malattas/imageprocessingtools/: MainActivity.kt  MyOpenCvView.kt  TextRecognitionActivity.java  TrackingColorActivity.java  WelcomeActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_text_recognition.xml  activity_tracking_color.xml  activity_welcome.xml  input_prompts.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/example/malattas/imageprocessingtools/: ExampleUnitTest.kt
